Fixes for graph deserialization